fix: remove CLS on mobile

--- a/styles/about.css
+++ b/styles/about.css
@@ -1,3 +1,8 @@
 .about {
-  font-size: 18px
+  font-size: 18px;
+  margin: 0;
+}
+
+li:first-child {
+  margin-top: 0;
 }
