--- a/styles/card.css
+++ b/styles/card.css
@@ -57,6 +57,7 @@
 
 .project-image.inline {
   max-width: 100px;
+  height: 100px;
   float: right;
   margin-top: 8px;
   margin-left: 8px;
