--- a/styles/headers.css
+++ b/styles/headers.css
@@ -1,5 +1,12 @@
 .section-header {
   user-select: none;
+  margin: 0;
+}
+
+section-header {
+  display: flex;
+  height: 68px;
+  align-items: center;
 }
 
 .header-wrapper:hover {
@@ -15,8 +22,4 @@
   text-decoration: none;
   margin-left: 8px;
   font-size: 17px;
-}
-
-.project-header {
-  margin-bottom: 12px;
 }
